--- a/styles/StockPage.module.scss
+++ b/styles/StockPage.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 2rem;
 
   .dropdown {
     h1 {
@@ -61,6 +62,7 @@
     .select:hover::after {
       color: #f39c12;
     }
+    padding: 2rem;
   }
 }
 
